fix(ui): word break in user dropdown menu

--- a/src/app/core/workbox/settings-menu.component.scss
+++ b/src/app/core/workbox/settings-menu.component.scss
@@ -8,6 +8,10 @@
         line-height: $line-height-base;
         padding: .55rem 1rem;
         cursor: pointer;
+
+        .text-muted {
+            white-space: nowrap;
+        }
     }
 
     .active-icon {
